--- a/templates/index.html
+++ b/templates/index.html
@@ -7,23 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
           crossorigin="anonymous">
-    <style>
-        .centered-card {
-            padding-top: 4rem;
-            display: flex;
-            justify-content: center;
-        }
-        .temp{
-            font-size: 64px;
-            font-weight: 500;
-        }
-        .first-col {
-            text-align: left;
-        }
-        .last-col {
-            text-align: right;
-        }
-    </style>
+    <link rel="stylesheet" href="/static/index.css">
 </head>
 <body>
     <div class="text-center">
